--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm i && npx prisma generate",
+    "build": "tsc",
     "seed": "prisma db seed",
     "migration:latest": "prisma migrate dev"
   },
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
+    "@types/express": "^4.17.17",
     "prisma": "^4.9.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
