--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bi-desktop-app",
+  "name": "bi",
   "productName": "desktop-app",
   "version": "1.0.0",
   "private": true,
@@ -10,10 +10,11 @@
     "webapp": "sh ./scripts/build-copy-web-app.sh",
     "dev": "cross-env WATCH=true && rimraf ./dist && npm run webapp && npm run tsc && electron-forge start",
     "electron:start": "electron-forge start",
-    "installProdNodeModules": "cp package.json ./dist && cp yarn.lock && cd ./dist && yarn --prod && cd ..",
-    "package": "npm run installProdNodeModules && electron-forge package",
-    "make": "npm run installProdNodeModules && electron-forge make",
-    "publish": "npm run installProdNodeModules && electron-forge publish",
+    "installProdNodeModules": "cp package.json ./dist && cp yarn.lock ./dist && cd ./dist && yarn --prod && cd ..",
+    "copy-make-files": "node ./scripts/generateZip.js",
+    "app:package": "npm run webapp && npm run installProdNodeModules && electron-forge package",
+    "app:make": "npm run webapp && npm run installProdNodeModules && electron-forge make && npm run copy-make-files",
+    "app:publish": "npm run webapp && npm run installProdNodeModules && electron-forge publish",
     "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [],
@@ -47,7 +48,10 @@
     "typescript": "^4.9.5",
     "@types/lodash": "4.14.191",
     "@types/uuid": "9.0.0",
-    "@types/detect-port": "1.3.2"
+    "@types/detect-port": "1.3.2",
+    "@types/cross-zip": "4.0.0",
+    "cross-zip": "4.0.0",
+    "glob": "9.0.1"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
