--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "babel-plugin-relay": "^13.2.0",
     "chalk": "^5.0.1",
     "cross-spawn": "^7.0.3",
-    "envars": "^0.4.0",
+    "dotenv": "16.0.3",
+    "dotenv-cli": "7.1.0",
     "eslint": "8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
@@ -69,8 +70,7 @@
     "jest": "^28.1.0",
     "minimist": "^1.2.6",
     "prettier": "2.8.3",
-    "react": "^18.2.0",
-    "zx": "^7.1.1"
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "typescript": "^4.9.5",
