--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -9,10 +9,10 @@
     "dev": "ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "bash ../../scripts/build-web-app.sh",
-    "prisma:generate": "prisma generate",
-    "seed": "prisma db seed",
-    "migration:dev": "dotenv -e ../../.env -c -- prisma migrate dev",
-    "migration:deploy": "prisma migrate deploy"
+    "prisma:generate": "dotenv -e ../../env/.env -c -- prisma generate",
+    "seed": "dotenv -e ../../env/.env -c -- prisma db seed",
+    "migration:dev": "dotenv -e ../../env/.env -c -- prisma migrate dev",
+    "migration:deploy": "dotenv -e ../../env/.env -c -- prisma migrate deploy"
   },
   "prisma": {
     "seed": "ts-node-dev prisma/seed.ts"
@@ -42,12 +42,8 @@
     "@types/server-destroy": "1.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5",
-    "envars": "^0.4.0",
     "dotenv": "16.0.3",
     "dotenv-cli": "7.1.0"
-  },
-  "envars": {
-    "cwd": "../../env"
   },
   "files": [
     "dist"
