--- a/projects/ui/package.json
+++ b/projects/ui/package.json
@@ -4,16 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "dev": "dotenv -e ../../env/.env -c -- vite",
+    "build": "dotenv -e ../../env/.env -c -- tsc && vite build",
+    "preview": "dotenv -e ../../env/.env -c -- vite preview",
     "codegen": "graphql-codegen"
   },
   "dependencies": {
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "urql": "^3.0.3"
+    "urql": "^3.0.3",
+    "i18next": "^22.4.15",
+    "react-i18next": "^12.2.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.0.0",
@@ -27,7 +29,9 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.5",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "dotenv": "16.0.3",
+    "dotenv-cli": "7.1.0"
   },
   "envars": {
     "cwd": "../../env"
