--- a/projects/ui/package.json
+++ b/projects/ui/package.json
@@ -10,12 +10,17 @@
     "codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@babel/runtime": "^7.21.0",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.0",
+    "recoil": "^0.7.7",
+    "notistack": "^3.0.1",
     "urql": "^3.0.3",
     "i18next": "^22.4.15",
-    "react-i18next": "^12.2.2"
+    "react-i18next": "^12.2.2",
+    "vitest": "^0.31.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.0.0",
@@ -30,8 +35,13 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.5",
     "vite": "^4.1.0",
-    "dotenv": "16.0.3",
-    "dotenv-cli": "7.1.0"
+    "dotenv": "^16.0.3",
+    "dotenv-cli": "^7.1.0",
+    "@mui/icons-material": "^5.11.16",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/lab": "^5.0.0-alpha.128",
+    "@mui/material": "^5.12.2"
   },
   "envars": {
     "cwd": "../../env"
