--- a/projects/ui/package.json
+++ b/projects/ui/package.json
@@ -20,7 +20,8 @@
     "urql": "^3.0.3",
     "i18next": "^22.4.15",
     "react-i18next": "^12.2.2",
-    "vitest": "^0.31.0"
+    "vitest": "^0.31.0",
+    "antd": "^5.4.6"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.0.0",
@@ -32,7 +33,6 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.5",
     "vite": "^4.1.0",
     "dotenv": "^16.0.3",
