--- a/projects/ui/package.json
+++ b/projects/ui/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "@babel/runtime": "^7.21.0",
     "graphql": "^16.6.0",
+    "@apollo/client": "^3.7.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
     "recoil": "^0.7.7",
     "notistack": "^3.0.1",
-    "urql": "^3.0.3",
     "i18next": "^22.4.15",
     "react-i18next": "^12.2.2",
     "vitest": "^0.31.0",
