--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -7,14 +7,15 @@
   "author": "help.bitskyai@gmail.com",
   "license": "GPL-3.0",
   "scripts": {
-    "dev": "plasmo dev",
+    "dev": "plasmo dev --verbose",
     "build": "plasmo build",
     "package": "plasmo package"
   },
   "dependencies": {
-    "plasmo": "0.64.5",
+    "plasmo": "0.70.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "antd": "^5.4.6"
   },
   "devDependencies": {
     "@types/chrome": "0.0.210",
@@ -30,10 +31,19 @@
   },
   "manifest": {
     "host_permissions": [
-      "https://*/*"
+      "<all_urls>"
     ],
     "permissions": [
-      "tabs"
+      "alarms",
+      "bookmarks",
+      "history",
+      "scripting",
+      "tabs",
+      "contextMenus",
+      "unlimitedStorage",
+      "webNavigation",
+      "notifications",
+      "storage"
     ]
   }
 }
