--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "plasmo": "0.70.1",
     "@plasmohq/messaging": "0.3.0",
+    "@plasmohq/storage": "^1.6.0",
+    "webextension-polyfill": "^0.10.0",
     "graphql": "^16.6.0",
     "@apollo/client": "^3.7.14",
     "react": "^18.2.0",
@@ -26,6 +28,7 @@
     "@types/node": "^18.11.19",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/webextension-polyfill": "^0.10.0",
     "prettier": "2.8.3",
     "typescript": "^4.9.5",
     "@plasmohq/prettier-plugin-sort-imports": "3.6.1"
