--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -21,7 +21,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
-    "antd": "^5.4.6"
+    "antd": "^5.4.6",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/chrome": "0.0.210",
@@ -29,6 +30,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/webextension-polyfill": "^0.10.0",
+    "@types/lodash": "^4.14.175",
     "prettier": "2.8.3",
     "typescript": "^4.9.5",
     "@plasmohq/prettier-plugin-sort-imports": "3.6.1"
