--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@pothos/core": "^3.24.1",
     "@pothos/plugin-prisma": "^3.40.2",
+    "@pothos/plugin-simple-objects": "^3.6.8",
     "@prisma/client": "^4.9.0",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
