--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "plasmo dev --verbose",
     "build": "plasmo build",
-    "package": "plasmo package"
+    "package": "plasmo package",
+    "codegen": "graphql-codegen"
   },
   "dependencies": {
     "plasmo": "0.70.1",
@@ -33,7 +34,13 @@
     "@types/lodash": "^4.14.175",
     "prettier": "2.8.3",
     "typescript": "^4.9.5",
-    "@plasmohq/prettier-plugin-sort-imports": "3.6.1"
+    "@plasmohq/prettier-plugin-sort-imports": "3.6.1",
+    "@graphql-codegen/cli": "^3.0.0",
+    "@graphql-codegen/typed-document-node": "^3.0.0",
+    "@graphql-codegen/typescript": "^3.0.0",
+    "@graphql-codegen/typescript-operations": "^3.0.0",
+    "dotenv": "^16.0.3",
+    "dotenv-cli": "^7.1.0"
   },
   "envars": {
     "cwd": "../../env"
