--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
     "antd": "^5.4.6",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "normalize-url": "^6.0.1"
   },
   "devDependencies": {
     "@types/chrome": "0.0.210",
