--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/webextension-polyfill": "^0.10.0",
     "@types/lodash": "^4.14.175",
+    "@types/debug": "^4.1.7",
     "prettier": "2.8.3",
     "typescript": "^4.9.5",
     "@plasmohq/prettier-plugin-sort-imports": "3.6.1",
