--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -43,6 +43,7 @@
     "@types/express": "^4.17.17",
     "@types/lodash": "4.14.191",
     "@types/server-destroy": "1.0.1",
+    "@types/cheerio": "^0.22.31",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5",
     "dotenv": "16.0.3",
